# CleanMic

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: com.cleanmic.CleanMic.desktop
locale/fr/LC_MESSAGES/: cleanmic.mo  cleanmic.po
scripts/: build-appimage.sh  fetch-vendors.sh  install-pre-push-hook.sh
src/: app.rs  audio.rs  autostart.rs  config.rs  instance_lock.rs  lib.rs  main.rs  tray.rs  updater.rs
src/engine/: deepfilter.rs  mod.rs  rnnoise.rs
src/engine/khip/: ffi.rs  mod.rs
src/pipewire/: devices.rs  live.rs  mod.rs  monitor.rs  ringbuf.rs
src/ui/: meters.rs  mod.rs  status.rs  welcome.rs  window.rs
tests/: pw_integration_test.rs
