[package]
name = "cleanmic"
version = "1.0.0"
edition = "2024"
description = "A Linux desktop app providing a clean virtual microphone with switchable noise suppression"
license = "MIT"

[features]
default = []
gui = ["dep:gtk4", "dep:libadwaita"]
pipewire = ["dep:pipewire"]
tray = ["dep:ksni"]
rnnoise = ["dep:nnnoiseless"]
deepfilter = ["dep:nnnoiseless"]
updater = ["dep:ureq", "dep:semver"]

[dependencies]
# Core (always available)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
libloading = "0.8"
libc = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Optional: GUI
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true, features = ["v1_5"] }

# Optional: Noise suppression
nnnoiseless = { version = "0.5", optional = true }

# Optional: Audio
pipewire = { version = "0.8", optional = true, features = ["v0_3_32"] }

# Optional: System tray
ksni = { version = "0.2", optional = true }

# Optional: Update checker
ureq = { version = "3", optional = true, features = ["json"] }
semver = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
